API/Litecad.h


BOOL   LCAPI lcWndCoordFromDrw   (HANDLE hLcWnd, double Xdrw, double Ydrw, int* pXwin, int* pYwin);

BOOL   LCAPI lcWndCoordToDrw     (HANDLE hLcWnd, int Xwin, int Ywin, double* pXdrw, double* pYdrw);

BOOL   LCAPI lcWndGetCursorCoord (HANDLE hLcWnd, int* pXwin, int* pYwin, double* pXdrw, double* pYdrw);

HANDLE LCAPI lcWndGetEntByPoint  (HANDLE hLcWnd, int Xwin, int Ywin);

BOOL   LCAPI lcWndSetCmdwin      (HANDLE hLcWnd, HANDLE hCmdLine);

BOOL   LCAPI lcWndSetPropwin     (HANDLE hLcWnd, HANDLE hPropWnd);

BOOL   LCAPI lcWndOnClose        (HANDLE hLcWnd);

BOOL   LCAPI lcWndGetPoint       (HANDLE hLcWnd, LPCWSTR szPrompt, int SnapMode, int Index, double* pX, double* pY);

BOOL   LCAPI lcWndGetPointBuf    (HANDLE hLcWnd, int Index, double* pX, double* pY);


// Coordinate convertions
BOOL   LCAPI lcCoordDrwToWnd     (HANDLE hLcWnd, double Xdrw, double Ydrw, int* pXwin, int* pYwin);

BOOL   LCAPI lcCoordWndToDrw     (HANDLE hLcWnd, int Xwin, int Ywin, double* pXdrw, double* pYdrw);


// Color from string
BOOL   LCAPI lcColorIsRGB      (LPCWSTR szColor);

int    LCAPI lcColorGetRed     (LPCWSTR szColor);
 
int    LCAPI lcColorGetGreen   (LPCWSTR szColor);

int    LCAPI lcColorGetBlue    (LPCWSTR szColor);

int    LCAPI lcColorGetIndex   (LPCWSTR szColor);

BOOL   LCAPI lcColorToVal      (LPCWSTR szColor, int* pbRGB, int* pIndex, int* pR,int* pG,int* pB);

// Color palette
BOOL   LCAPI lcColorSetPalette (int Index, int R,int G,int B);

BOOL   LCAPI lcColorGetPalette (int Index, int* pR,int* pG,int* pB);


// Command Window
HANDLE LCAPI lcCreateCmdwin    (HWND hWndParent, int Left, int Top, int Width, int Height);

BOOL   LCAPI lcCmdwinResize    (HANDLE hCmdLine, int Left, int Top, int Width, int Height);


// Properties Window
HANDLE LCAPI lcCreatePropwin   (HWND hWndParent, int Left, int Top, int Width, int Height);

BOOL   LCAPI lcPropwinResize   (HANDLE hPropWnd, int Left, int Top, int Width, int Height);

BOOL   LCAPI lcPropwinUpdate   (HANDLE hPropWnd, BOOL bSelChanged);


// Misc
int     LCAPI lcGetErrorCode    ();

LPCWSTR LCAPI lcGetErrorStr     ();

int     LCAPI lcExtractPreview  (LPCWSTR szFileName, HGLOBAL hGlob, int MaxSize);

BOOL    LCAPI lcExtractFileInfo (LPCWSTR szFileName, WCHAR* szGuid, WCHAR* szComment, int* pInt0, int* pInt1);

BOOL    LCAPI lcGetClientSize   (HWND hWnd, int* pWidth, int* pHeight);

LPCWSTR LCAPI lcGetFileName     (HWND hWnd, int Mode);

LPCWSTR LCAPI lcGetValue        (HWND hWnd, int Lef, int Top, LPCWSTR szCaption, LPCWSTR szPrompt, LPCWSTR szValue);

void    LCAPI lcTextOut         (HDC hDC, int x, int y, LPCWSTR szText, int ColorRGB);

BOOL    LCAPI lcFilletSetLines  (double L1x0, double L1y0, double L1x1, double L1y1, double L2x0, double L2y0, double L2x1, double L2y1);

BOOL    LCAPI lcFillet          (double Rad, double Bis, double Tang);

BOOL    LCAPI lcFilletGetPoint  (int iPnt, double* pX, double* pY);


// Interface for Custom Commands
HANDLE LCAPI lcCreateCommand   (HANDLE hLcWnd, int Id, LPCWSTR szName, BOOL bNeedSel);

BOOL   LCAPI lcCmdExit         ();

BOOL   LCAPI lcCmdPrompt       (HANDLE hCmd, LPCWSTR szText);

HANDLE LCAPI lcCmdGetEntByPoint (HANDLE hCmd, int Xwnd, int Ywnd);

BOOL   LCAPI lcCmdSelectEnt    (HANDLE hCmd, HANDLE hEntity, BOOL bSelect);

BOOL   LCAPI lcCmdRedraw       (HANDLE hCmd);

BOOL   LCAPI lcCmdSetFocus     (HANDLE hCmd);

BOOL   LCAPI lcCmdRegen        (HANDLE hCmd, HANDLE hEnt);

BOOL   LCAPI lcCmdClearPoints  (HANDLE hCmd);

BOOL   LCAPI lcCmdAddPoint     (HANDLE hCmd, int Id, double X, double Y);

BOOL   LCAPI lcCmdGetPoint     (HANDLE hCmd, int Id, double* pX, double* pY);

BOOL   LCAPI lcCmdSetBasePoint (HANDLE hCmd, BOOL bEnable, double X, double Y);

BOOL   LCAPI lcCmdDrawLine     (HANDLE hCmd, double X0, double Y0, double X1, double Y1);

BOOL   LCAPI lcCmdDrawPickbox  (HANDLE hCmd, int Xwnd, int Ywnd);

BOOL   LCAPI lcCmdEqualPoints  (HANDLE hCmd, double X0, double Y0, double X1, double Y1, int Delta);


// 3D surface
void   LCAPI lcSurfInitialize     (int MaxSectPnt, double AngStep);

void   LCAPI lcSurfUnInitialize   ();

void   LCAPI lcSurfClearTriangles ();

BOOL   LCAPI lcSurfAddTriangle    (double X0, double Y0, double Z0, double X1, double Y1, double Z1, double X2, double Y2, double Z2);

BOOL   LCAPI lcSurfGetZ           (double X, double Y, double* pZ);

BOOL   LCAPI lcSurfGetZ_dbg       (double X, double Y, double* pZ, double* pX0, double* pY0, double* pZ0, double* pX1, double* pY1, double* pZ1, double* pX2, double* pY2, double* pZ2);

void   LCAPI lcSurfClearPlan      ();

BOOL   LCAPI lcSurfAddPlanVer     (double X, double Y, double Bulge);

int    LCAPI lcSurfMakeSection    ();

BOOL   LCAPI lcSurfGetSectPoint   (int iPnt, double* pX, double* pY, double* pZ);


// cross-section
void   LCAPI lcCrossSetTolerance (double Zero1, double One1, double Zero2, double One2, double NearPt, double Clas, double CutGr, double RigPt);

BOOL   LCAPI lcCrossClear        ();

BOOL   LCAPI lcCrossBegin        (int PlineType);

BOOL   LCAPI lcCrossAddPoint     (double X, double Y);

BOOL   LCAPI lcCrossEnd          ();

int    LCAPI lcCrossCalcArea     ();

int    LCAPI lcCrossCalcArea2    (HANDLE hDrw, int GroundKey, int RoadKey, int LinkKey);

BOOL   LCAPI lcCrossGetArea      (int iArea, double* pAreaVal, int* pNumPnts);

BOOL   LCAPI lcCrossGetAreaPoint (int iArea, int iPnt, double* pX, double* pY);


// Events
/******************************************************************************
* Functions to handle LiteCAD events
* 
* Client application can define special functions that LiteCAD will call
* when the defined event will happen during user's work with drawing.
* This functions are called"event handlers" and client application
* must provide it to LiteCAD by LcOnEvent... functions
* You don't need to define all event handlers, just those you want to use
*
* Below follows the definitions of syntax of event functions
* Client application must provide exactly the same syntax 
*******************************************************************************/
// window events
typedef void (CALLBACK* F_MOUSEMOVE)    (HANDLE hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);

typedef void (CALLBACK* F_MOUSEDOWN)    (HANDLE hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);

typedef void (CALLBACK* F_MOUSEUP)      (HANDLE hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);

typedef void (CALLBACK* F_MOUSEDBLCLK)  (HANDLE hLcWnd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);

typedef void (CALLBACK* F_MOUSESNAP)    (HANDLE hLcWnd, double Delta, double* pX, double* pY);

typedef void (CALLBACK* F_MOUSELEAVE)   (HANDLE hLcWnd);
 
typedef void (CALLBACK* F_MOUSEWHEEL)   (HANDLE hLcWnd, int Flags, int Delta);

typedef void (CALLBACK* F_KEYDOWN)      (HANDLE hLcWnd, int VirtKey, int Flags, BOOL bCtrl, BOOL bShift);

typedef void (CALLBACK* F_PAINT)        (HANDLE hLcWnd, HANDLE hView, int Mode, HDC hDC, int Left, int Top, int Right, int Bottom);

typedef void (CALLBACK* F_ZOOM)         (HANDLE hLcWnd, double Left, double Bottom, double Right, double Top, double PixelSize);
 
typedef void (CALLBACK* F_SELECTVIEW)   (HANDLE hLcWnd, HANDLE hView);

typedef void (CALLBACK* F_GETPOINT)     (HANDLE hLcWnd, HANDLE hView, int Index, double X, double Y);

typedef void (CALLBACK* F_ADDCOMMAND)   (HANDLE hLcWnd);


typedef void (CALLBACK* F_CMD_START)    (HANDLE hCmd, int Prm);

typedef void (CALLBACK* F_CMD_FINISH)   (HANDLE hCmd);

typedef void (CALLBACK* F_CMD_MOUSEDOWN)(HANDLE hCmd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);

typedef void (CALLBACK* F_CMD_MOUSEUP)  (HANDLE hCmd, int Button, int Flags, int Xwin, int Ywin, double X, double Y);

typedef void (CALLBACK* F_CMD_MOUSEMOVE)(HANDLE hCmd, HDC hDC, int Flags, int Xwin, int Ywin, double X, double Y);

typedef void (CALLBACK* F_CMD_STRING)   (HANDLE hCmd, LPCWSTR szStr);


typedef void (CALLBACK* F_ADDENTITY)    (HANDLE hDrw, HANDLE hBlock, HANDLE hEntity);

typedef void (CALLBACK* F_REGEN)        (HANDLE hDrw, HANDLE hView, int Percent);

typedef void (CALLBACK* F_FIOPROGRESS)  (HANDLE hDrw, int Mode, int IntVal, LPCWSTR szFileName);

typedef void (CALLBACK* F_SELECTION)    (HANDLE hDrw, HANDLE hBlock, BOOL bSelect, int nEnts, HANDLE hEnt, int nTotal);

typedef void (CALLBACK* F_PROPCHANGED)  (HANDLE hDrw, int idProp, HANDLE hObj);


typedef void (CALLBACK* F_GRIPSELECT)   (HANDLE hEnt, int iGrip, double X, double Y);

typedef void (CALLBACK* F_GRIPMOVE)     (HANDLE hEnt, int iGrip, double* pX, double* pY, double* pAngle, bool bDrag);

typedef void (CALLBACK* F_ENTERASE)     (HANDLE hEnt);

typedef void (CALLBACK* F_ENTMOVE)      (HANDLE hEnt, double DX, double DY, bool bDrag);

typedef void (CALLBACK* F_ENTROTATE)    (HANDLE hEnt, double X0, double Y0, double Angle, bool bDrag);

typedef void (CALLBACK* F_ENTSCALE)     (HANDLE hEnt, double X0, double Y0, double Scale, bool bDrag);

typedef void (CALLBACK* F_ENTMIRROR)    (HANDLE hEnt, double X1, double Y1, double X2, double Y2, bool bDrag);

typedef void (CALLBACK* F_ENTPROP)      (HANDLE hEnt, int idProp);


typedef void (CALLBACK* F_FONTREPLACE)  (HANDLE hDrw, LPCWSTR szStyleName, LPCWSTR szOrigName);

typedef void (CALLBACK* F_ADDSTR)       ();

typedef void (CALLBACK* F_HELP)         (HANDLE hDrw, int idTopic);




/******************************************************************************
* Group of functions to set EVENT HANDLERS.
* Client application must call this functions at the beginning
* of execution in order to pass for LiteCAD addresses of the
* application-defined functions that will be called on
* some LiteCAD events. There is no need to use all this
* functions, just set for those events you want to catch. 
*
* IMPORTANT!!!
* Order of the lcOnEvent... functions must be the same as above typedefs (for automatic generation OCX files)
*******************************************************************************/
void LCAPI lcEventReturnCode     (int code);

void LCAPI lcEventsEnable        (BOOL bEnable);
 

void LCAPI lcOnEventMouseMove    (F_MOUSEMOVE pFunc);

void LCAPI lcOnEventMouseDown    (F_MOUSEDOWN pFunc);

void LCAPI lcOnEventMouseUp      (F_MOUSEUP pFunc);

void LCAPI lcOnEventMouseDblClk  (F_MOUSEDBLCLK pFunc);

void LCAPI lcOnEventMouseSnap    (F_MOUSESNAP pFunc);

void LCAPI lcOnEventMouseLeave   (F_MOUSELEAVE pFunc);

void LCAPI lcOnEventMouseWheel   (F_MOUSEWHEEL pFunc);

void LCAPI lcOnEventKeyDown      (F_KEYDOWN pFunc);
    
void LCAPI lcOnEventPaint        (F_PAINT pFunc);

void LCAPI lcOnEventZoom         (F_ZOOM pFunc);

void LCAPI lcOnEventSelectView   (F_SELECTVIEW pFunc);

void LCAPI lcOnEventGetPoint     (F_GETPOINT pFunc);

void LCAPI lcOnEventAddCommand   (F_ADDCOMMAND pFunc);
       

void LCAPI lcOnEventCmdStart     (F_CMD_START pFunc);
     
void LCAPI lcOnEventCmdFinish    (F_CMD_FINISH pFunc);
    
void LCAPI lcOnEventCmdMouseDown (F_CMD_MOUSEDOWN pFunc);
 
void LCAPI lcOnEventCmdMouseUp   (F_CMD_MOUSEUP pFunc);
   
void LCAPI lcOnEventCmdMouseMove (F_CMD_MOUSEMOVE pFunc);
 
void LCAPI lcOnEventCmdString    (F_CMD_STRING pFunc);


void LCAPI lcOnEventAddEntity    (F_ADDENTITY pFunc);
 
void LCAPI lcOnEventRegen        (F_REGEN pFunc);

void LCAPI lcOnEventFioProgress  (F_FIOPROGRESS pFunc);

void LCAPI lcOnEventSelection    (F_SELECTION pFunc);

void LCAPI lcOnEventPropChanged  (F_PROPCHANGED pFunc);


void LCAPI lcOnEventGripSelect   (F_GRIPSELECT pFunc);

void LCAPI lcOnEventGripMove     (F_GRIPMOVE pFunc);

void LCAPI lcOnEventEntErase     (F_ENTERASE pFunc);

void LCAPI lcOnEventEntMove      (F_ENTMOVE pFunc);

void LCAPI lcOnEventEntRotate    (F_ENTROTATE pFunc);

void LCAPI lcOnEventEntScale     (F_ENTSCALE pFunc);

void LCAPI lcOnEventEntMirror    (F_ENTMIRROR pFunc);

void LCAPI lcOnEventEntProp      (F_ENTPROP pFunc);


void LCAPI lcOnEventHelp         (F_HELP pFunc);

void LCAPI lcOnEventAddStr       (F_ADDSTR pFunc);

void LCAPI lcOnEventFontReplace  (F_FONTREPLACE pFunc);