API/Litecad.pas

Function lcWndCoordFromDrw (hLcWnd: Integer; Xdrw: Double; Ydrw: Double; pXwin: Pinteger; pYwin: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcWndCoordToDrw (hLcWnd: Integer; Xwin: Integer; Ywin: Integer; pXdrw: Pdouble; pYdrw: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcWndGetCursorCoord (hLcWnd: Integer; pXwin: Pinteger; pYwin: Pinteger; pXdrw: Pdouble; pYdrw: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcWndGetEntByPoint (hLcWnd: Integer; Xwin: Integer; Ywin: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndSetCmdwin (hLcWnd: Integer; hCmdLine: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndSetPropwin (hLcWnd: Integer; hPropWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndOnClose (hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndGetPoint (hLcWnd: Integer; szPrompt: PWideChar; SnapMode: Integer; Index: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcWndGetPointBuf (hLcWnd: Integer; Index: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcCoordDrwToWnd (hLcWnd: Integer; Xdrw: Double; Ydrw: Double; pXwin: Pinteger; pYwin: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcCoordWndToDrw (hLcWnd: Integer; Xwin: Integer; Ywin: Integer; pXdrw: Pdouble; pYdrw: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcColorIsRGB (szColor: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcColorGetRed (szColor: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcColorGetGreen (szColor: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcColorGetBlue (szColor: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcColorGetIndex (szColor: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcColorToVal (szColor: PWideChar; pbRGB: Pinteger; pIndex: Pinteger; pR: Pinteger; pG: Pinteger; pB: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcColorSetPalette (Index: Integer; R: Integer; G: Integer; B: Integer): Integer; stdcall; external 'litecad.dll';
Function lcColorGetPalette (Index: Integer; pR: Pinteger; pG: Pinteger; pB: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcCreateCmdwin (hWndParent: HWND; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdwinResize (hCmdLine: Integer; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCreatePropwin (hWndParent: HWND; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPropwinResize (hPropWnd: Integer; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPropwinUpdate (hPropWnd: Integer; bSelChanged: Integer): Integer; stdcall; external 'litecad.dll';
Function lcGetErrorCode : Integer; stdcall; external 'litecad.dll';
Function lcGetErrorStr : PWidechar; stdcall; external 'litecad.dll';
Function lcExtractPreview (szFileName: PWideChar; hGlob: Integer; MaxSize: Integer): Integer; stdcall; external 'litecad.dll';
Function lcExtractFileInfo (szFileName: PWideChar; szGuid: Pointer; szComment: Pointer; pInt0: Pinteger; pInt1: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcGetClientSize (hWnd: HWND; pWidth: Pinteger; pHeight: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcGetFileName (hWnd: HWND; Mode: Integer): PWidechar; stdcall; external 'litecad.dll';
Function lcGetValue (hWnd: HWND; Lef: Integer; Top: Integer; szCaption: PWideChar; szPrompt: PWideChar; szValue: PWideChar): PWidechar; stdcall; external 'litecad.dll';
Procedure lcTextOut (hDC: HDC; x: Integer; y: Integer; szText: PWideChar; ColorRGB: Integer); stdcall; external 'litecad.dll';
Function lcFilletSetLines (L1x0: Double; L1y0: Double; L1x1: Double; L1y1: Double; L2x0: Double; L2y0: Double; L2x1: Double; L2y1: Double): Integer; stdcall; external 'litecad.dll';
Function lcFillet (Rad: Double; Bis: Double; Tang: Double): Integer; stdcall; external 'litecad.dll';
Function lcFilletGetPoint (iPnt: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcCreateCommand (hLcWnd: Integer; Id: Integer; szName: PWideChar; bNeedSel: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdExit : Integer; stdcall; external 'litecad.dll';
Function lcCmdPrompt (hCmd: Integer; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcCmdGetEntByPoint (hCmd: Integer; Xwnd: Integer; Ywnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdSelectEnt (hCmd: Integer; hEntity: Integer; bSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdRedraw (hCmd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdSetFocus (hCmd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdRegen (hCmd: Integer; hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdClearPoints (hCmd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdAddPoint (hCmd: Integer; Id: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcCmdGetPoint (hCmd: Integer; Id: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcCmdSetBasePoint (hCmd: Integer; bEnable: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcCmdDrawLine (hCmd: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double): Integer; stdcall; external 'litecad.dll';
Function lcCmdDrawPickbox (hCmd: Integer; Xwnd: Integer; Ywnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCmdEqualPoints (hCmd: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Delta: Integer): Integer; stdcall; external 'litecad.dll';
Procedure lcSurfInitialize (MaxSectPnt: Integer; AngStep: Double); stdcall; external 'litecad.dll';
Procedure lcSurfUnInitialize ; stdcall; external 'litecad.dll';
Procedure lcSurfClearTriangles ; stdcall; external 'litecad.dll';
Function lcSurfAddTriangle (X0: Double; Y0: Double; Z0: Double; X1: Double; Y1: Double; Z1: Double; X2: Double; Y2: Double; Z2: Double): Integer; stdcall; external 'litecad.dll';
Function lcSurfGetZ (X: Double; Y: Double; pZ: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcSurfGetZ_dbg (X: Double; Y: Double; pZ: Pdouble; pX0: Pdouble; pY0: Pdouble; pZ0: Pdouble; pX1: Pdouble; pY1: Pdouble; pZ1: Pdouble; pX2: Pdouble; pY2: Pdouble; pZ2: Pdouble): Integer; stdcall; external 'litecad.dll';
Procedure lcSurfClearPlan ; stdcall; external 'litecad.dll';
Function lcSurfAddPlanVer (X: Double; Y: Double; Bulge: Double): Integer; stdcall; external 'litecad.dll';
Function lcSurfMakeSection : Integer; stdcall; external 'litecad.dll';
Function lcSurfGetSectPoint (iPnt: Integer; pX: Pdouble; pY: Pdouble; pZ: Pdouble): Integer; stdcall; external 'litecad.dll';
Procedure lcCrossSetTolerance (Zero1: Double; One1: Double; Zero2: Double; One2: Double; NearPt: Double; Clas: Double; CutGr: Double; RigPt: Double); stdcall; external 'litecad.dll';
Function lcCrossClear : Integer; stdcall; external 'litecad.dll';
Function lcCrossBegin (PlineType: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCrossAddPoint (X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcCrossEnd : Integer; stdcall; external 'litecad.dll';
Function lcCrossCalcArea : Integer; stdcall; external 'litecad.dll';
Function lcCrossCalcArea2 (hDrw: Integer; GroundKey: Integer; RoadKey: Integer; LinkKey: Integer): Integer; stdcall; external 'litecad.dll';
Function lcCrossGetArea (iArea: Integer; pAreaVal: Pdouble; pNumPnts: Pinteger): Integer; stdcall; external 'litecad.dll';
Function lcCrossGetAreaPoint (iArea: Integer; iPnt: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Procedure lcEventReturnCode (code: Integer); stdcall; external 'litecad.dll';
Procedure lcEventsEnable (bEnable: Integer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseMove (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseDown (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseUp (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseDblClk (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseSnap (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseLeave (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventMouseWheel (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventKeyDown (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventPaint (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventZoom (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventSelectView (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventGetPoint (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventAddCommand (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdStart (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdFinish (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdMouseDown (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdMouseUp (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdMouseMove (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventCmdString (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventAddEntity (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventRegen (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventFioProgress (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventSelection (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventPropChanged (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventGripSelect (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventGripMove (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntErase (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntMove (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntRotate (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntScale (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntMirror (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventEntProp (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventHelp (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventAddStr (pFunc: Pointer); stdcall; external 'litecad.dll';
Procedure lcOnEventFontReplace (pFunc: Pointer); stdcall; external 'litecad.dll';

implementation
end.
